# replit-test-django

./: .gitignore  .replit  LINKEDIN-SETUP.md  VPS-DEPLOYMENT-ARTIFACTS.md  VPS-DEPLOYMENT-GUIDE.md  package.json  pnpm-lock.yaml  pyproject.toml  replit.md
.agents/: agent_assets_metadata.toml
.agents/memory/: MEMORY.md  ai-form-field-consistency.md  ai-image-draft-persistence.md  channel-verification-reactivation.md  dashboard-publish-trends.md  django-app-naming.md  django-csrf-settings.md  django-workflow-path.md  llm-word-count-enforcement.md  media-publishing-lessons.md  openai-json-retry-validation.md  replit-git-push-callback.md  telegram-bot-startup.md  telegram-channel-posts.md  telegram-no-caption-split.md  (+1 more)
attached_assets/: Pasted---1783157635550_1783157635556.txt  Pasted--AI-Content-Automation-Platform-Project-Specification-O_1782661600557.txt  Pasted--LinkedIn-WordPress--1783144342762_1783144342764.txt  Pasted--ai-engine--1783496502019_1783496502020.txt  Pasted--ai-engine--1783752916295_1783752916296.txt  Pasted--ai-generate--1782894163922_1782894163923.txt  Pasted-I-am-permanently-moving-this-project-from-Replit-to-my-_1783405480746.txt  Pasted-We-are-continuing-development-of-our-AI-Content-Automat_1782722640878.txt  Pasted-We-are-continuing-development-of-our-AI-Content-Automat_1782723999378.txt  Pasted-You-have-already-inspected-the-entire-project-Now-I-do-_1783406083187.txt
backend/: requirements.txt
deploy/: n8n.abrit.io.env.template  nginx-n8n.abrit.io.conf
scripts/: deploy-vps.sh  start-linkedin-local.ps1  stop-linkedin-local.ps1
(+125 files in other folders)
