[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "dj-database-url>=3.1.2",
    "django>=5.2.15",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "jdatetime>=5.3.0",
    "openai>=2.44.0",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "python-decouple>=3.8",
    "python-telegram-bot>=22.8",
    "requests>=2.34.2",
]
